# kiloeyes

./: .coveragerc  .gitignore  .gitreview  .testr.conf  AUTHORS  CONTRIBUTING.md  ChangeLog  README.md  _60_monitoring.py  kiloeyesrc  requirements.txt  run_tests.sh  setup.cfg  setup_horizon.sh  test-requirements.txt  tox.ini
etc/: alarms-persister.conf  dashboard.ini  default-mapping.json  kiloeyes-notification-engine.conf  kiloeyes-threshold-engine.conf  kiloeyes.conf  kiloeyes.ini  metrics-persister.conf  metrics.template
kiloeyes/: service.py
kiloeyes/api/: ceilometer_api_v2.py  monasca_api_v2.py  server.py
kiloeyes/common/: alarm_expr_calculator.py  alarm_expr_parser.py  alarm_expr_validator.py  constant.py  email_sender.py  es_conn.py  kafka_conn.py  namespace.py  resource_api.py  timeutils.py
kiloeyes/dispatcher/: __init__.py  sample_dispatcher.py
kiloeyes/microservice/: es_persister.py  fixed_strategy.py  metrics_fixer.py  notification_engine.py  notification_processor.py  server.py  threshold_engine.py  threshold_processor.py  timed_strategy.py
kiloeyes/middleware/: keystone_augmenter.py  login.py  meter_validator.py  metric_validator.py
kiloeyes/openstack/common/: eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  service.py  strutils.py  systemd.py  threadgroup.py
kiloeyes/tests/: __init__.py  setup_metrics.py
kiloeyes/tests/common/: test_alarm_expr_calculator.py  test_alarm_expr_parser.py  test_alarm_expr_validator.py  test_case_alarm_expr_validator.json  test_email_sender.py  test_es_conn.py
kiloeyes/tests/microservice/: test_case_threshold_processor.json  test_metrics_fixer.py  test_notification_processor.py  test_strategy.py  test_threshold_engine.py  test_threshold_processor.py
kiloeyes/tests/middleware/: test_augmenter.py
kiloeyes/v2/elasticsearch/: alarmdefinitions.py  alarms.py  meters.py  metrics.py  notificationmethods.py  samples.py  versions.py
kiloeyes_horizon/: MANIFEST.in  README.rst  setup.py
kiloeyes_horizon/enabled/: _50_kiloeyes_ui.py
kiloeyes_horizon/kiloeyes_ui/: dashboard.py
kiloeyes_horizon/kiloeyes_ui/cpu_perc/: panel.py  tests.py  urls.py  views.py
kiloeyes_horizon/kiloeyes_ui/disk_space/: panel.py  tests.py  urls.py  views.py
kiloeyes_horizon/kiloeyes_ui/inputoutput/: panel.py  tests.py  urls.py  views.py
kiloeyes_horizon/kiloeyes_ui/load_avg/: panel.py  tests.py  urls.py  views.py
kiloeyes_horizon/kiloeyes_ui/network/: panel.py  tests.py  urls.py  views.py
kiloeyes_horizon/kiloeyes_ui/process_mem/: panel.py  tests.py  urls.py  views.py
tools/: install_venv.py
vagrant/: README.md  Vagrantfile  rebootvm.sh  stvm.sh
(+40 files in other folders)
