[metadata]
name = kiloeyes

# Juno
version = 2014.7

summary = OpenStack Monitoring Service
description-file =
    README.md
author = Tong Li
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    kiloeyes

data_files =
    /etc/kiloeyes =
        etc/kiloeyes.conf
        etc/kiloeyes.ini
        etc/dashboard.ini
        etc/metrics-persister.conf
        etc/alarms-persister.conf
        etc/kiloeyes-notification-engine.conf
        etc/kiloeyes-threshold-engine.conf
        etc/metrics.template

[entry_points]
console_scripts =
    kiloeyes-service = kiloeyes.microservice.server:main

kiloeyes.microservice =
    es_persister = kiloeyes.microservice.es_persister:ESPersister
    threshold_engine = kiloeyes.microservice.threshold_engine:ThresholdEngine
    notification_engine = kiloeyes.microservice.notification_engine:NotificationEngine

kiloeyes.dispatcher =
    metrics = kiloeyes.v2.elasticsearch.metrics:MetricDispatcher
    versions = kiloeyes.v2.elasticsearch.versions:VersionDispatcher
    alarmdefinitions = kiloeyes.v2.elasticsearch.alarmdefinitions:AlarmDefinitionDispatcher
    notificationmethods = kiloeyes.v2.elasticsearch.notificationmethods:NotificationMethodDispatcher
    alarms = kiloeyes.v2.elasticsearch.alarms:AlarmDispatcher
    meters = kiloeyes.v2.elasticsearch.meters:MeterDispatcher
    samples = kiloeyes.v2.elasticsearch.samples:CeilometerSampleDispatcher

kiloeyes.index.strategy =
    timed = kiloeyes.microservice.timed_strategy:TimedStrategy
    fixed = kiloeyes.microservice.fixed_strategy:FixedStrategy

kiloeyes.message.processor =
    metrics_msg_fixer = kiloeyes.microservice.metrics_fixer:MetricsFixer
    notification_processor = kiloeyes.microservice.notification_processor:NotificationProcessor
    threshold_processor = kiloeyes.microservice.threshold_processor:ThresholdProcessor

paste.filter_factory =
    login = kiloeyes.middleware.login:filter_factory
    inspector = kiloeyes.middleware.inspector:filter_factory
    metric_validator = kiloeyes.middleware.metric_validator:filter_factory
    meter_validator = kiloeyes.middleware.meter_validator:filter_factory
    keystone_augmenter = kiloeyes.middleware.keystone_augmenter:filter_factory

[pbr]
warnerrors = True
